# weather_updates

./: pyproject.toml
src/weather_updated/: agent.py  chatbot.py  scripts.py
