[project]
name = "weather-updated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asmaiqbal85", email = "aasmaiqbal85@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.13",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[project.scripts]
weather-updated = "weather_updated:main"
weather-update = "weather_updated.scripts:run"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
